[project]
name = "pillar_for_comfyui"
version = "0.0.3"
description = "Pillar is an extension plugin for ComfyUI, providing the ability to call local distributed services for ComfyUI. Currently, it integrates the llama-joycaption-beta-one-hf-llava model and offers a distributed deployment solution to solve the problem that the model occupies too many resources and affects the image generation efficiency."
license = {file = "LICENSE"}
requires-python = ">=3.11"

[project.urls]
Repository = "https://github.com/aicoder-max/Pillar_For_ComfyUI"
Documentation = "https://github.com/aicoder-max/Pillar_For_ComfyUI/tree/main?tab=readme-ov-file"
"Bug Tracker" = "https://github.com/aicoder-max/Pillar_For_ComfyUI/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.comfy]
PublisherId = "jack-liu"
DisplayName = "Pillar_For_ComfyUI"
Icon = "https://github.com/aicoder-max/Pillar_For_ComfyUI/blob/main/icon.png"